--- a/vcard/index.pug
+++ b/vcard/index.pug
@@ -392,6 +392,7 @@ html(lang='en')
               // skill item
               .col.col-d-6.col-t-6.col-m-12.border-line-v
                 .skills-list
+                  i.fas.fa-code 
                   ul
                     li.border-line-h
                       i.fab.fa-html5
@@ -409,31 +410,56 @@ html(lang='en')
                       .progress
                         .percentage(style='width:80%;')
                     li
+                      i.devicon-git-plain.colored
+                      .name Git
+                      .progress
+                        .percentage(style='width:75%;')
+              // skill item
+              .col.col-d-6.col-t-6.col-m-12.border-line-v
+                .skills-list
+                  .skill-title.border-line-h Preprocessors
+                  ul
+                    li.border-line-h
+                      i.devicon-sass-original.colored
+                      .name SASS
+                      .progress
+                        .percentage(style='width:50%;')
+                    li.border-line-h
+                      .name Pug/Jade
+                      .progress
+                        .percentage(style='width:60%;')
+                    li.border-line-h
+                      i.devicon-less-plain-wordmark.colored
+                      .name LESS
+                      .progress
+                        .percentage(style='width:35%;')
+              .clear
+              .col.col-d-6.col-t-6.col-m-12.border-line-v
+                .skills-list
+                  .skill-title.border-line-h Framework
+                  ul
+                    li.border-line-h
+                      i.devicon-bootstrap-plain.colored
+                      .name Bootstrap
+                      .progress
+                        .percentage(style='width:80%;')
+                    li.border-line-h
+                      i.devicon-react-original.colored
+                      .name React
+                      .progress
+                        .percentage(style='width:20%;')
+
+              .col.col-d-6.col-t-6.col-m-12.border-line-v
+                .skills-list
+                  .skill-title.border-line-h Libralies
+                  ul
+                    li
                       i.devicon-jquery-plain.colored
                       .name Jquery
                       .progress
                         .percentage(style='width:85%;')
-              // skill item
-              .col.col-d-6.col-t-6.col-m-12.border-line-v
-                .skills-list
-                  ul
-                    li.border-line-h
-                      .name WordPress
-                      .progress
-                        .percentage(style='width:85%;')
-                    li.border-line-h
-                      .name PHP / MYSQL
-                      .progress
-                        .percentage(style='width:65%;')
-                    li.border-line-h
-                      .name Angular / JavaScript
-                      .progress
-                        .percentage(style='width:75%;')
-                    li
-                      .name HTML / CSS
-                      .progress
-                        .percentage(style='width:90%;')
               .clear
+            
       // Card - Works
       #works-card.card-inner
         .card-wrap
