--- a/vcard/index.pug
+++ b/vcard/index.pug
@@ -392,7 +392,7 @@ html(lang='en')
               // skill item
               .col.col-d-6.col-t-6.col-m-12.border-line-v
                 .skills-list
-                  i.fas.fa-code 
+                  .skill-title.border-line-h Tech.
                   ul
                     li.border-line-h
                       i.fab.fa-html5
@@ -451,7 +451,7 @@ html(lang='en')
 
               .col.col-d-6.col-t-6.col-m-12.border-line-v
                 .skills-list
-                  .skill-title.border-line-h Libralies
+                  .skill-title.border-line-h Libraries
                   ul
                     li
                       i.devicon-jquery-plain.colored
