--- a/vcard/green.css
+++ b/vcard/green.css
@@ -1,5 +1,3 @@
-
-
 /* TABLE OF CONTENTS
 	1. Template Green
 */
@@ -54,19 +52,27 @@ button:hover {
 }
 
 .card-started:after {
-  background: -moz-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: -webkit-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: linear-gradient(135deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
+  background: #00F260;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0575E6, #00F260);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0575E6, #00F260);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .card-started .profile .image:before {
-  background: -moz-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: -webkit-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: linear-gradient(135deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
+  background: #00F260;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0575E6, #00F260);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0575E6, #00F260);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .card-started .profile .subtitle {
-  color: #2eca7f;
+  background: linear-gradient(to right, #0575E6 50%, #00F260 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .card-started .profile .social a:hover .ion,
@@ -76,16 +82,18 @@ button:hover {
 }
 
 .content .title:before {
-  background: -moz-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: -webkit-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: linear-gradient(135deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
+  background: -moz-linear-gradient(-45deg, #0575E6 0%, #00F260 100%);
+  background: -webkit-linear-gradient(-45deg, #0575E6 0%, #00F260 100%);
+  background: linear-gradient(135deg,#0575E6 0%, #00F260 100%);
 }
 
 .service-items .service-item .icon {
-  color: #2eca7f;
-  background: -moz-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: -webkit-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
-  background: linear-gradient(135deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
+  background: -moz-radial-gradient(center, ellipse cover, #2eca7f 0%, #2eca7f 4%, #0575E6 100%); /* ff3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #2eca7f), color-stop(4%, #2eca7f), color-stop(100%, #0575E6)); /* safari4+,chrome */
+  background: -webkit-radial-gradient(center, ellipse cover, #2eca7f 0%, #2eca7f 4%, #0575E6 100%); /* safari5.1+,chrome10+ */
+  background: -o-radial-gradient(center, ellipse cover, #2eca7f 0%, #2eca7f 4%, #0575E6 100%); /* opera 11.10+ */
+  background: -ms-radial-gradient(center, ellipse cover, #2eca7f 0%, #2eca7f 4%, #0575E6 100%); /* ie10+ */
+  background: radial-gradient(ellipse at center, #2eca7f 0%, #2eca7f 4%, #0575E6 100%); /* w3c */
   line-height: 2;
 }
 
