--- a/layout.css
+++ b/layout.css
@@ -563,10 +563,8 @@
 .card-inner:after {
 	content: '';
 	position: absolute;
-	top: 0;
-	left: 0;
-	right: 20px;
-	height: 20px;
+	top: 20px;
+	left: 20px;
 	background: #ffffff;
 	z-index: 10;
 }
@@ -653,8 +651,8 @@
 	content: '';
 	position: absolute;
 	left: -12px;
-	top: 0;
-	width: 30px;
+	top: -5px;
+	width: 100%;
 	height: 30px;
 	background: -moz-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
 	background: -webkit-linear-gradient(-45deg, rgba(46, 202, 127, 0.4) 0%, rgba(46, 202, 127, 0.01) 100%);
@@ -664,6 +662,7 @@
 	-moz-border-radius: 30px;
 	-webkit-border-radius: 30px;
 	-khtml-border-radius: 30px;
+	padding: 2px 0px;
 }
 
 .content .title:after {
@@ -1569,3 +1568,4 @@ i.fas.fa-arrow-right{
     font-weight: 900;
 	font-size: 1.9rem;
 }
+
